tests/ui/foreign_match.stderr
Error [E0016]: Jet does not use `match`
  --> tests/ui/foreign_match.jet:3:5
    |
  3 |     match x {
    |     ^^^^^
 Why: choosing one branch from many is written with `switch`
 Fix: replace `match` with `switch`
