tests/ui/foreign_match.jet
fn main() {
    val x = 1;
    match x {
        x == 1 -> {
            print("one");
        };
        else -> {
            print("other");
        };
    }
}
